# relics

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: game.ron  player.ron  ui_config.json  ui_config.json5  world.ron
src/: action.rs  cli.rs  component.rs  event.rs  game.rs  game_event.rs  gameevent.rs  gamelogic.rs  main.old.rs  main.rs  player.rs  rng.rs  tui.rs  ui_component.rs  ui_mode.rs  uimode.rs  utils.rs  worldgen.rs
src/config/: configmaster.rs  game.rs  mod.rs  player.rs  ui.rs  world.rs
src/map/: camera.rs  mod.rs  rect.rs  tile.rs  tile_definition.rs
src/map/builders/: initial_empty_map.rs  initial_rooms.rs  meta_room_drawer.rs  meta_test_one.rs  mod.rs
src/map/builders/initial/: empty_map.rs  mod.rs  rooms.rs
src/map/builders/meta/: borders.rs  dungeon_entry_room_based.rs  metabuildertemplate.rs  mod.rs  reveal_all.rs  room_drawer.rs  room_sorter.rs  test_one.rs
src/system/: action.rs  intent.rs  mod.rs  player.rs  ui_render.rs
src/ui/: mod.rs
src/ui/components/: game_ui.rs  home.rs  hud.rs  menu.rs  mod.rs
