[package]
name = "relics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bevy_ecs = "0.16"
bevy = { version = "0.16", default-features = false, features = ["bevy_state", "bevy_log", "bevy_dev_tools"] }
bevy_ratatui = "0.8.3"
bracket-random = "0.8.7"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
derive_deref = "1"
flexi_logger = "0.30"
grid = { version = "0.16.2", features = ["serde"] }
json5 = "0.4"
lazy_static = "1.4"
log = "0.4"
ratatui = { version = "0.29", features = ["serde", "macros"] }
ron = "0.10"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[build-dependencies]
anyhow = "1"
vergen-git2 = { version = "1.0", features = ["build", "rustc", "si", "cargo"] }

[dev-dependencies]
bevy_dev_tools = "0.16"
